<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">VR Background Service</string>
    <string name="app_description">Pico VR 后台控制服务</string>
    <string name="service_enabled">后台服务已启用</string>
    <string name="service_disabled">后台服务已禁用</string>
    <string name="device_info">设备信息</string>
    <string name="battery_level">电池电量: </string>
    <string name="head_battery">头显电量: </string>
    <string name="left_controller">左手柄电量: </string>
    <string name="right_controller">右手柄电量: </string>
    <string name="open_file">打开文件</string>
    <string name="restart_device">重启设备</string>
    <string name="shutdown_device">关闭设备</string>
    <string name="wake_device">唤醒设备</string>
    <string name="get_battery_info">获取电池信息</string>
    
    <!-- 设备配置相关 -->
    <string name="device_config">设备配置</string>
    <string name="device_id">设备编号</string>
    <string name="device_name">设备名称</string>
    <string name="control_server_url">播控系统地址</string>
    <string name="control_server_port">播控系统端口</string>
    <string name="data_report_interval">数据上报间隔(秒)</string>
    <string name="auto_report">自动上报数据</string>
    <string name="save_config">保存配置</string>
    <string name="test_connection">测试连接</string>
    <string name="reset_config">重置配置</string>
    <string name="config_saved">配置已保存</string>
    <string name="config_invalid">配置无效，请检查所有字段</string>
    <string name="connection_success">连接成功</string>
    <string name="connection_failed">连接失败</string>
    <string name="last_update">最后更新时间: </string>
</resources>
